-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
The Jenkins build failed as following:
/tmp/rpmbuild-lustre-jenkins-EUr1M0VA/BUILD/lustre-2.8.53_1_g8028e7f/lustre/lfsck/lfsck_namespace.c: In function 'lfsck_namespace_load': /tmp/rpmbuild-lustre-jenkins-EUr1M0VA/BUILD/lustre-2.8.53_1_g8028e7f/lustre/lfsck/lfsck_namespace.c:375: error: 'XATTR_NAME_LFSCK_NAMESPACE_OLD' undeclared (first use in this function) /tmp/rpmbuild-lustre-jenkins-EUr1M0VA/BUILD/lustre-2.8.53_1_g8028e7f/lustre/lfsck/lfsck_namespace.c:375: error: (Each undeclared identifier is reported only once /tmp/rpmbuild-lustre-jenkins-EUr1M0VA/BUILD/lustre-2.8.53_1_g8028e7f/lustre/lfsck/lfsck_namespace.c:375: error: for each function it appears in.) make[7]: *** [/tmp/rpmbuild-lustre-jenkins-EUr1M0VA/BUILD/lustre-2.8.53_1_g8028e7f/lustre/lfsck/lfsck_namespace.o] Error 1 make[6]: *** [/tmp/rpmbuild-lustre-jenkins-EUr1M0VA/BUILD/lustre-2.8.53_1_g8028e7f/lustre/lfsck] Error 2 make[5]: *** [/tmp/rpmbuild-lustre-jenkins-EUr1M0VA/BUILD/lustre-2.8.53_1_g8028e7f/lustre] Error 2 make[5]: *** Waiting for unfinished jobs.... make[4]: *** [_module_/tmp/rpmbuild-lustre-jenkins-EUr1M0VA/BUILD/lustre-2.8.53_1_g8028e7f] Error 2 make[3]: *** [modules] Error 2 make[2]: *** [all-recursive] Error 1 make[1]: *** [all] Error 2 error: Bad exit status from /tmp/rpmbuild-lustre-jenkins-EUr1M0VA/TMP/rpm-tmp.Tm48y3 (%build)