LU-8127 lfsck: compile XATTR_NAME_LFSCK_NAMESPACE_OLD

The logic related with XATTR_NAME_LFSCK_NAMESPACE_OLD is only
compiled for the version less than OBD_OCD_VERSION(2, 8, 53, 0).

Signed-off-by: Fan Yong <fan.yong@intel.com>
Change-Id: Ie0f9c0901e69465fe73051c16fa5e7f5997ef082
Reviewed-on: http://review.whamcloud.com/20109
Tested-by: Jenkins
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>